# py_ai_tutorial

./: .gitignore  404.html  GITHUB_PAGES_SETUP.md  STAGE3_PROJECTS.md  index.html  mkdocs.yml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml
configs/: environments.yaml
cross-platform/setup-cloud-gpu/: index.html
cross-platform/setup-linux/: index.html
cross-platform/setup-macos-arm64/: index.html
cross-platform/setup-macos-intel/: index.html
cross-platform/setup-windows-native/: index.html
cross-platform/setup-windows-wsl2/: index.html
cross-platform/troubleshooting/: index.html
data/stage4/: README.md
docs/: glossary.md  index.md  learning-path.md
framework-comparison/: index.html
glossary/: index.html
learning-path/: index.html
notebooks/stage4/: 02-pytorch-basics.ipynb  03-cnn-image-classification.ipynb  04-rnn-text-classification.ipynb
prerequisites/: index.html
projects/stage3/p01-healthcare/: README.md  pyproject.toml
projects/stage3/p01-healthcare/configs/: default.yaml
projects/stage3/p01-healthcare/notebooks/: analysis.ipynb
projects/stage3/p01-healthcare/src/: __init__.py  analyze.py
projects/stage3/p03-bank-marketing/: README.md  pyproject.toml
projects/stage3/p03-bank-marketing/configs/: default.yaml
projects/stage3/p03-bank-marketing/notebooks/: analysis.ipynb
projects/stage3/p03-bank-marketing/src/: __init__.py  analyze.py
scripts/data/: download-stage3.py  download-stage4.py  (+2 more)
search/: search_index.json
stage3/: index.html
stage4/: index.html
stage5/: index.html
(+60 files in other folders)
